--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,15 @@ spring:
     console:
       enabled: ${H2_CONSOLE_ENABLED:false}
       path: /h2-console
+  main:
+    cloud-platform: kubernetes
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
 
 server:
   address: 0.0.0.0
   port: ${SERVER_PORT:8080}
+  shutdown: graceful
   servlet:
     context-path: ${SERVER_CONTEXT_PATH:/achelos_testfachdienst}
   forward-headers-strategy: framework
@@ -43,12 +48,15 @@ management:
     web:
       base-path: /actuator
       exposure:
-        include: health,info,metrics,prometheus
+        include: health,info,metrics,prometheus,otlp
   endpoint:
     health:
       show-details: when_authorized
       probes:
         enabled: true
+      group:
+        readiness:
+          include: readinessState,db
   metrics:
     export:
       prometheus:
@@ -58,6 +66,32 @@ management:
       enabled: true
     readinessState:
       enabled: true
+
+selfdisclosure:
+  resource-attributes:
+    product_name: "Testfachdienst"
+    product_version: 0.1.3
+    producttype_version: 1.0.0
+    configuration_version: 0.1.3
+
+otlp:
+  export:
+    logs:
+      intervalSeconds: ${OTLP_EXPORT_INTERVAL_SECONDS:30}
+      grpc:
+        enabled: ${OTLP_EXPORT_GRPC_ENABLED:false}
+        host: ${OTLP_EXPORT_GRPC_HOST:zeta-guard-telemetry-gateway:4317}
+      http:
+        enabled: ${OTLP_EXPORT_HTTP_ENABLED:false}
+        host: ${OTLP_EXPORT_HTTP_HOST:http://zeta-guard-telemetry-gateway:4318}
+
+jobrunr:
+  background-job-server:
+    enabled: true
+    poll-interval-in-seconds: 5
+  dashboard:
+    enabled: true
+    port: 18000
 
 logging:
   level:
